# sandbox

./: LICENSE
moonbit/sudoku/: index.html  main.mjs  moon.mod.json
moonbit/sudoku/main/: main.mbt  sudoku.mbt
python/ex-marimo/: fastapi_example.py  pyproject.toml  use_great_tables.py
python/marimo-wasm/: a.py  main.py  pyproject.toml
python/marimo-wasm/.github/scripts/: build.py
python/marimo-wasm/.github/workflows/: deploy.yml
rust/css-language-server/: .gitignore  Cargo.toml
rust/css-language-server/src/: main.rs  notification.rs  request.rs  response.rs
rust/mcp-server-trial/: Cargo.toml
rust/mcp-server-trial/src/: main.rs
rust/taste-ratatouille/: Cargo.toml
rust/taste-ratatouille/examples/: bar_chart.rs  calendar.rs  center.rs  elm.rs  grid.rs  list.rs  playground.rs
rust/tui-example/: Cargo.toml
rust/tui-example/src/: app.rs  event.rs  main.rs  stateful_widgets.rs  tui.rs  ui_state.rs
sql/data-pipeline/: dbt_project.yml
sql/data-pipeline/models/staging/: tpch_sources.yml
