[project]
name = "marimo-wasm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "lightgbm>=4.6.0",
    "marimo[recommended]>=0.13.15",
    "matplotlib>=3.10.3",
    "numpy>=2.2.6",
    "pandas>=2.3.0",
    "pyobsplot>=0.5.3.3",
    "scikit-learn>=1.6.1",
    "shap>=0.47.2",
    "typer>=0.16.0",
]
